--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -80,7 +80,7 @@
       "title": "How it works",
       "description": "Peyjabankinn is a friendly prediction game where you earn points for correct match results and bonus questions.",
       "paymentTitle": "Participation & payment",
-      "paymentDescription": "Participation is organized per competition. Payment is handled outside the app via bank transfer.",
+      "paymentDescription": "Participation is organized per competition and has to be completed before 17:00 on 15th January. Payment is handled outside the app via bank transfer.",
       "amount": "Amount",
       "ssn": "SSN",
       "account": "Account",
