--- a/frontend/src/locales/is.json
+++ b/frontend/src/locales/is.json
@@ -80,7 +80,7 @@
       "title": "Hvernig virkar þetta",
       "description": "Peyjabankinn er frábær leikur sem gerir það ennþá skemmtilegra að fylgjast með stórmóti í handbolta.",
       "paymentTitle": "Þátttaka og greiðslur",
-      "paymentDescription": "Þátttaka krefst inngöngugjalds. Greitt er með bankamillifærslu til skipuleggjanda keppninnar.",
+      "paymentDescription": "Þátttaka krefst inngöngugjalds, sem þarf að vera búið að ganga frá fyrir kl 17:00 fimmtudaginn 15. janúar. Greitt er með bankamillifærslu til skipuleggjanda keppninnar.",
       "amount": "Upphæð",
       "ssn": "Kennitala",
       "account": "Reikningur",
