--- a/frontend/src/locales/is.json
+++ b/frontend/src/locales/is.json
@@ -124,7 +124,9 @@
     "placeholderHome": "Heim",
     "placeholderAway": "Úti",
     "selectCompetition": "Velja keppni",
-    "errorSave": "Mistókst að vista spá fyrir þennan leik."
+    "errorSave": "Mistókst að vista spá fyrir þennan leik.",
+    "fillRandom": "Slembival á auða",
+    "confirmFillRandom": "Viltu nota slembival?"
   },
   "bonus": {
     "title": "Aukaspurningar",
