Add shortcut to your position in leaderboard

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -70,7 +70,10 @@
     "oneScore": "One correct",
     "correctBonus": "Correct Bonus",
     "points": "Points",
-    "stats": "Statistics"
+    "stats": "Statistics",
+    "yourPosition": "Your Position",
+    "pointsAbbr": "pts"
+
   },
   "frontpage": {
     "welcome": "Welcome!",
